--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hex-hover-converter",
     "displayName": "Hex Hover Converter",
     "description": "Provides conversion between decimal, hex and binary numbers while hovering.",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "publisher": "maziac",
     "license": "MIT",
     "keywords": [
@@ -22,7 +22,7 @@
     "categories": [
         "Other"
     ],
-    "icon": "images/icon.png",
+    "icon": "assets/icon.png",
     "activationEvents": [
         "workspaceContains:*"
     ],
