--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,16 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
-        "outDir": "out",
-        "lib": [
-            "es6"
-        ],
+        "noImplicitAny": false,
+        "removeComments": false,
+        "noUnusedLocals": true,
+        "noImplicitThis": true,
+        "inlineSourceMap": false,
         "sourceMap": true,
-        "rootDir": "src",
-        /* Strict Type-Checking Option */
-        //"strict": true,   /* enable all strict type-checking options */
-        /* Additional Checks */
-        //"noUnusedLocals": true /* Report errors on unused locals. */
-        // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-        // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-        // "noUnusedParameters": true,  /* Report errors on unused parameters. */
-    },
-    "exclude": [
-        "node_modules",
-        ".vscode-test"
-    ]
+        "outDir": "./out",
+        "preserveConstEnums": true,
+        "strictNullChecks": true,
+        "noUnusedParameters": false,
+        "allowJs": true
+    }
 }
