--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hex-hover-converter",
     "displayName": "Hex Hover Converter",
     "description": "Provides conversion between decimal, hex and binary numbers while hovering.",
-    "version": "1.2.1",
+    "version": "1.2.2-rc1",
     "publisher": "maziac",
     "license": "MIT",
     "keywords": [
