--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
         "url": "https://github.com/maziac/hex-hover-converter.git"
     },
     "engines": {
-        "vscode": "^1.54.0"
+        "vscode": "^1.71.0"
     },
     "categories": [
         "Other"
     ],
     "icon": "assets/icon.png",
     "activationEvents": [
-        "*"
+        "onStartupFinished"
     ],
     "main": "./out/extension",
     "scripts": {
@@ -36,9 +36,9 @@
         "publish": "vsce publish"
     },
     "devDependencies": {
-        "@types/mocha": "^8.2.0",
-        "@types/node": "^13.13.39",
-        "@types/vscode": "^1.52.0",
-        "typescript": "^4.1.3"
+        "@types/mocha": "^10.0.0",
+        "@types/node": "18.8.2",
+        "@types/vscode": "^1.71.0",
+        "typescript": "^4.8.4"
     }
 }
