Converted values can be clicked to replace the hovered value in the editor

--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
         "@types/node": "18.8.2",
         "@types/vscode": "^1.71.0",
         "typescript": "^4.8.4"
-    }
+    },
+    "commands": [
+        {
+            "command": "hexHover.replace",
+            "title": "Replace hovered value"
+        }
+    ]
 }
