--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
                 },
                 "hexHoverConverter.formatString.Hexadecimal": {
                     "type": "string",
-                    "default": "0x{hex} → <0x{hex_to_dec}>, <0b{hex_to_bin}>",
+                    "default": "0x{hex} → <{hex_to_dec}>, <0b{hex_to_bin}>",
                     "description": "Format string for hexadecimal source value.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {hex} for the hovered decimal value, {hex_to_dec} for the converted hexadecimal value, and {hex_to_bin} for the converted binary value.\nClear this string to omit the conversion.",
                     "order": 12
                 },
                 "hexHoverConverter.formatString.Binary": {
                     "type": "string",
-                    "default": "0b{bin} → <0x{bin_to_hex}>, <0b{bin_to_dec}>",
+                    "default": "0b{bin} → <0x{bin_to_hex}>, <{bin_to_dec}>",
                     "description": "Format string for binary source value.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {bin} for the hovered binary value, {bin_to_hex} for the converted hexadecimal value, and {bin_to_dec} for the converted decimal value.\nClear this string to omit the conversion.",
                     "order": 13
                 },
