--- a/package.json
+++ b/package.json
@@ -34,26 +34,26 @@
             "properties": {
                 "hexHoverConverter.formatString.Decimal": {
                     "type": "string",
-                    "default": "{dec} → <0x{dec_to_hex}>, <0b{dec_to_bin}>",
-                    "description": "Format string for decimal source values.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {dec} for the hovered decimal value, {dec_to_hex} for the converted hexadecimal value, and {dec_to_bin} for the converted binary value.\nClear this string to omit the conversion.",
+                    "default": "{decu} → <0x{hex}>, <0b{bin}>\\n",
+                    "description": "Format string for decimal source values.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {decu} for the hovered decimal positive value, {hex} for the converted hexadecimal value, and {bin} for the converted binary value.\nClear this string to omit the conversion.",
                     "order": 10
                 },
                 "hexHoverConverter.formatString.SignedDecimal": {
                     "type": "string",
-                    "default": "{sdec} → <0x{sdec_to_hex}>, <0b{sdec_to_bin}>",
-                    "description": "Format string for signed decimal source values.\nThis will be used only if the decimal value is prepended by a minus sign.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {sdec} for the hovered signed decimal value, {sdec_to_hex} for the converted hexadecimal value, and {sdec_to_bin} for the converted binary value.\nClear this string to omit the conversion.",
+                    "default": "{deci} → <0x{hex}>, <0b{bin}>\\n",
+                    "description": "Format string for signed decimal source values.\nThis will be used only if the decimal value is prepended by a minus sign.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {deci} for the hovered signed decimal value, {hex} for the converted hexadecimal value, and {bin} for the converted binary value.\nClear this string to omit the conversion.",
                     "order": 11
                 },
                 "hexHoverConverter.formatString.Hexadecimal": {
                     "type": "string",
-                    "default": "0x{hex} → <{hex_to_2dec}>, <0b{hex_to_bin}>",
-                    "description": "Format string for hexadecimal source value.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {hex} for the hovered decimal value, {hex_to_dec} for the converted hexadecimal value, and {hex_to_bin} for the converted binary value.\n{hex_to_2dec} is a special value that shows both positive and negative conversion if both differ.\nClear this string to omit the conversion.",
+                    "default": "0x{hex} → <{dec}>, <0b{bin}>\\n",
+                    "description": "Format string for hexadecimal source value.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {hex} for the hovered hex value, {decu} for the converted positive decimal value, {deci} for the converted negative value (if existing) and {bin} for the converted binary value.\n{dec} is a special value that shows both positive and negative conversion values (if existing).\nClear this string to omit the conversion.",
                     "order": 12
                 },
                 "hexHoverConverter.formatString.Binary": {
                     "type": "string",
-                    "default": "0b{bin} → <0x{bin_to_hex}>, <{bin_to_2dec}>",
-                    "description": "Format string for binary source value.\nAny text inside <...> brackets will be replaced with the corresponding value.\nUse the following variables: {bin} for the hovered binary value, {bin_to_hex} for the converted hexadecimal value, and {bin_to_dec} for the converted decimal value.\n{bin_to_2dec} is a special value that shows both positive and negative conversion if both differ.\nClear this string to omit the conversion.",
+                    "default": "0b{bin} → <{dec}>, <0x{hex}>\\n",
+                    "description": "Format string for binary source value.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {bin} for the hovered binary value, {decu} for the converted positive decimal value, {deci} for the converted negative value (if existing) and {hex} for the converted hexadecimal value.\n{dec} is a special value that shows both positive and negative conversion values (if existing).\nClear this string to omit the conversion.",
                     "order": 13
                 },
                 "hexHoverConverter.hexRecognition.strict": {
