--- a/package.json
+++ b/package.json
@@ -32,25 +32,25 @@
             "type": "object",
             "title": "Hex Hover Converter",
             "properties": {
-                "hexHoverConverter.formatString.Decimal": {
+                "hexHoverConverter.formatString.decimal": {
                     "type": "string",
                     "default": "{decu} → <0x{hex}>, <0b{bin}>\\n",
                     "description": "Format string for decimal source values.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {decu} for the hovered decimal positive value, {hex} for the converted hexadecimal value, and {bin} for the converted binary value.\nClear this string to omit the conversion.",
                     "order": 10
                 },
-                "hexHoverConverter.formatString.SignedDecimal": {
+                "hexHoverConverter.formatString.signedDecimal": {
                     "type": "string",
                     "default": "{deci} → <0x{hex}>, <0b{bin}>\\n",
                     "description": "Format string for signed decimal source values.\nThis will be used only if the decimal value is prepended by a minus sign.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {deci} for the hovered signed decimal value, {hex} for the converted hexadecimal value, and {bin} for the converted binary value.\nClear this string to omit the conversion.",
                     "order": 11
                 },
-                "hexHoverConverter.formatString.Hexadecimal": {
+                "hexHoverConverter.formatString.hexadecimal": {
                     "type": "string",
                     "default": "0x{hex} → <{dec}>, <0b{bin}>\\n",
                     "description": "Format string for hexadecimal source value.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {hex} for the hovered hex value, {decu} for the converted positive decimal value, {deci} for the converted negative value (if existing) and {bin} for the converted binary value.\n{dec} is a special value that shows both positive and negative conversion values (if existing).\nClear this string to omit the conversion.",
                     "order": 12
                 },
-                "hexHoverConverter.formatString.Binary": {
+                "hexHoverConverter.formatString.binary": {
                     "type": "string",
                     "default": "0b{bin} → <{dec}>, <0x{hex}>\\n",
                     "description": "Format string for binary source value.\nAny text inside <...> brackets is clickable and will replace the hovered text with the corresponding value.\nUse the following variables: {bin} for the hovered binary value, {decu} for the converted positive decimal value, {deci} for the converted negative value (if existing) and {hex} for the converted hexadecimal value.\n{dec} is a special value that shows both positive and negative conversion values (if existing).\nClear this string to omit the conversion.",
